# energy-vad

./: .gitignore  README.md  example.py  pyproject.toml  requirements_dev.txt  tox.ini
energy_vad/: __init__.py
script/: format  lint  setup
tests/: test_energy_vad.py
